@@ -18,4 +18,6 @@ Zollern Galaxy v2.0.8
     - The Player can only access it by right-clicking with an Omnitool.
     - The Player will not get the same lore book twice IN THE SAME SESSION.
         - If the game is closed, then the pool regenerates.
-* 
+* Added a config option to enable/disable the showing/registration of Stars with no Planets yet.
+    - Turned off by default.
+* Added 20 findable Lore Books. More will be added in the future.
